# internal/models/request/request.go
@@ -5,19 +5,21 @@ import (
 )
 
 type RequestCreateGoal struct {
-	Name       string    `json:"name,omitempty"`
-	GoalAmount float32   `json:"goal_amount,omitempty" sql:"type:decimal(10,2);"`
-	TargetDate time.Time `json:"target_date,omitempty"`
+	Name       string    `json:"name,omitempty" validate:"required"`
+	GoalAmount float32   `json:"goal_amount,omitempty" validate:"required"`
+	TargetDate time.Time `json:"target_date,omitempty" validate:"required"`
 }
 
 type RequestUpdateGoal struct {
-	*RequestCreateGoal
+	Name       string    `json:"name,omitempty"`
+	GoalAmount float32   `json:"goal_amount,omitempty"`
+	TargetDate time.Time `json:"target_date,omitempty"`
 }
 
 type RequestCreateContribution struct {
-	Amount float32 `json:"amount,omitempty" sql:"type:decimal(10,2);"`
+	Amount float32 `json:"amount,omitempty" validate:"required"`
 }
 
 type RequestUpdateContribution struct {
-	Amount float32 `json:"amount,omitempty" sql:"type:decimal(10,2);"`
+	Amount float32 `json:"amount,omitempty" validate:"required"`
 }
